--- a/traditions/index.html
+++ b/traditions/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>Traditions</title>
   </head>
   <body class="trads-body">
@@ -36,8 +41,39 @@
       </article> -->
       <!-- New Year -->
       <article class="trads-article trads-new-year">
-        <h2>Chinese New Year</h2>
+        <h2 class="trads-h2">Chinese New Year</h2>
         <div>
+          <section class="trads-section">
+            <p class="trads-p">
+              The Lunar New Year is a 15 day festival beginning with the first
+              new moon between the 21st of January and the 20th of February.
+            </p>
+
+            <p class="trads-p">
+              One of the most popular events during the new year celebrations in
+              Hong Kong is the New Year Parade where you can see things from
+              lung dragons to traditional Chinese dancers. The parade starts at
+              8pm and goes from Nathan Road to Salisbury Road to Canton Road and
+              finally to Haiphong Road.
+            </p>
+
+            <p class="trads-p">
+              Unique to Hong Kong new years celebrations is horse racing. The
+              Sha Tin Racecourse is usually filled with around one hundred
+              thousand spectators during these events. The Hong Kong Jockey Club
+              also organises a program of cultural festivities and
+              entertainment.
+            </p>
+
+            <p class="trads-p">
+              The Spring Lantern Festival marks the end of the Chinese New Year.
+              The whole city is decorated with colourful lanterns and a carnival
+              is held at the Hong Kong Cultural Centre Piazza where you can see
+              impressive lantern displays as well as other performances like
+              dancing and acrobatics.
+            </p>
+          </section>
+
           <figure>
             <img src="./img/fireworks.jpg" alt="Firworks over Hong Kong" />
             <figcaption>
@@ -53,92 +89,73 @@
               </p>
             </figcaption>
           </figure>
-          <p class="trads-p">
-            The Lunar New Year is a 15 day festival beginning with the first new
-            moon between the 21st of January and the 20th of February. One of
-            the most popular events during the new year celebrations in Hong
-            Kong is the New Year Parade where you can see things from lung
-            dragons to traditional Chinese dancers. The parade starts at 8pm and
-            goes from Nathan Road to Salisbury Road to Canton Road and finally
-            to Haiphong Road. Unique to Hong Kong new years celebrations is
-            horse racing. The Sha Tin Racecourse is usually filled with around
-            one hundred thousand spectators during these events. The Hong Kong
-            Jockey Club also organises a program of cultural festivities and
-            entertainment. The Spring Lantern Festival marks the end of the
-            Chinese New Year. The whole city is decorated with colourful
-            lanterns and a carnival is held at the Hong Kong Cultural Centre
-            Piazza where you can see impressive lantern displays as well as
-            other performances like dancing and acrobatics.
-          </p>
         </div>
       </article>
 
       <!-- Tin Hau -->
       <article class="trads-article trads-tin-hau">
+        <h2 class="trads-h2">Tin Hau Festival</h2>
         <div>
-          <div>
-            <h2>Tin Hau Festival</h2>
-            <figure>
-              <img src="./img/Tin_Hau.jpg" alt="Statue of Tin Hau" />
-              <figcaption>
-                Statue of the goddess Tin Hau at Kwum Yam Shrine, Repulse Bay,
-                Hong Kong
-                <p class="trads-reference">
-                  <a
-                    href="https://commons.wikimedia.org/wiki/File:Tin_Hau_statue_at_Kwun_Yam_Shrine_at_Repulse_Bay.jpg"
-                    >FlyingToaster at English Wikipedia</a
-                  >,
-                  <a href="https://creativecommons.org/licenses/by/3.0"
-                    >CC BY 3.0</a
-                  >, via Wikimedia Commons
-                </p>
-              </figcaption>
-            </figure>
-            <p>
-              The Chinese sea goddess Tin Hau has historically been one of the
-              most important gods in Hong Kong. As such, her birthday is
-              accompanied by a grand celebration. While there are many different
-              celebrations around the area the biggest one is in Cha Kwo Ling
-              where people will parade down the streets, some may also dress up
-              as mythological creatures like dragons or qilins and perform
-              traditional dances.
-            </p>
-          </div>
+          <p class="trads-p">
+            The Chinese sea goddess Tin Hau has historically been one of the
+            most important gods in Hong Kong. As such, her birthday is
+            accompanied by a grand celebration. While there are many different
+            celebrations around the area the biggest one is in Cha Kwo Ling
+            where people will parade down the streets, some may also dress up as
+            mythological creatures like dragons or qilins and perform
+            traditional dances.
+          </p>
+          <figure>
+            <img src="./img/Tin_Hau.jpg" alt="Statue of Tin Hau" />
+            <figcaption>
+              Statue of the goddess Tin Hau at Kwum Yam Shrine, Repulse Bay,
+              Hong Kong
+              <p class="trads-reference">
+                <a
+                  href="https://commons.wikimedia.org/wiki/File:Tin_Hau_statue_at_Kwun_Yam_Shrine_at_Repulse_Bay.jpg"
+                  >FlyingToaster at English Wikipedia</a
+                >,
+                <a href="https://creativecommons.org/licenses/by/3.0"
+                  >CC BY 3.0</a
+                >, via Wikimedia Commons
+              </p>
+            </figcaption>
+          </figure>
         </div>
       </article>
 
       <!-- boat -->
       <article class="trads-article trads-boat">
+        <h2 class="trads-h2">Dragon Boat Festival</h2>
+
         <div>
-          <div>
-            <h2>Dragon Boat Festival</h2>
-            <figure>
-              <img src="./img/boat.jpg" alt="Multiple Dragon Boats" />
-              <figcaption>
-                Dragon boat race in Hong Kong
-                <p class="trads-reference">
-                  <a
-                    href="https://commons.wikimedia.org/wiki/File:Dragon_boat_racing_in_Hong_Kong.jpg"
-                    >Atmhk</a
-                  >,
-                  <a href="https://creativecommons.org/licenses/by-sa/3.0"
-                    >CC BY-SA 3.0</a
-                  >, via Wikimedia Commons
-                </p>
-              </figcaption>
-            </figure>
-            <p>
-              The dragon boat festival is a public holiday in Hong Kong where
-              people race in long canoes made to mimic ancient war boats with up
-              to 80 crew members rowing in the beat to a drum. While there are
-              several races taking place during the festival the CCB Hong Kong
-              International Dragon Boat Races in Victoria Harbour is the most
-              popular with over four thousand participants from all over the
-              world and up to thirty thousand spectators.
-            </p>
-          </div>
+          <p class="trads-p">
+            The dragon boat festival is a public holiday in Hong Kong where
+            people race in long canoes made to mimic ancient war boats with up
+            to 80 crew members rowing in the beat to a drum. While there are
+            several races taking place during the festival the CCB Hong Kong
+            International Dragon Boat Races in Victoria Harbour is the most
+            popular with over four thousand participants from all over the world
+            and up to thirty thousand spectators.
+          </p>
+          <figure>
+            <img src="./img/boat.jpg" alt="Multiple Dragon Boats" />
+            <figcaption>
+              Dragon boat race in Hong Kong
+              <p class="trads-reference">
+                <a
+                  href="https://commons.wikimedia.org/wiki/File:Dragon_boat_racing_in_Hong_Kong.jpg"
+                  >Atmhk</a
+                >,
+                <a href="https://creativecommons.org/licenses/by-sa/3.0"
+                  >CC BY-SA 3.0</a
+                >, via Wikimedia Commons
+              </p>
+            </figcaption>
+          </figure>
         </div>
       </article>
     </main>
   </body>
+  <script src="../src/index.js"></script>
 </html>
