Ladde till punkter till paths

--- a/sights/index.html
+++ b/sights/index.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Sights</title>
 </head>
 
 <body>
     <header class="topnav" id="myTopnav">
 
-        <a href="/" id="homeBtn"></a>
-        <a href="/" >Home</a>
-        <a href="/traditions/">traditions</a>
-        <a href="/sights/" class="active">Sights</a>
-        <a href="/culture/">culture</a>
+        <a href="../" id="homeBtn"></a>
+        <a href="../" >Home</a>
+        <a href="../traditions/">traditions</a>
+        <a href="../sights/" class="active">Sights</a>
+        <a href="../culture/">culture</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
         </a>
@@ -91,6 +91,6 @@
         </ul>
     </footer>
 </body>
-<script src="/src/index.js"></script>
+<script src="../src/index.js"></script>
 
 </html>
