--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
             <h1>Sights</h1>
             <span id="sight-card-1" class="sightlink">
                 <h2>Skyline</h2>
-                <a href="../sights/#s1"></a>
+                <a href="./sights/#s1"></a>
 
             </span>
             <span id="sight-card-2" class="sightlink">
                 <h2>Park</h2>
-                <a href="../sights/#s2"></a>
+                <a href="./sights/#s2"></a>
 
             </span>
             <span id="sight-card-3" class="sightlink">
                 <h2>Big Buddha</h2>
-                <a href="../sights/#s3"></a>
+                <a href="./sights/#s3"></a>
             </span>
         </section>
 
