--- a/404.html
+++ b/404.html
@@ -4,22 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>404</title>
+    <style>
+        h1 {
+            color: white;
+            text-align: center;
+        }
+        main {
+            padding-top:5em;
+            height: 10em;
+            font-size: 5em;
+            background-color: #222;
+        }
+    </style>
 </head>
 <body>
     <header class="topnav" id="myTopnav">
 
-        <a href="./" id="homeBtn"></a>
-        <a href="./" class="active">Home</a>
-        <a href="./traditions/">traditions</a>
-        <a href="./sights/">Sights</a>
-        <a href="./culture/">culture</a>
+        <a href="../" id="homeBtn"></a>
+        <a href="../" >Home</a>
+        <a href="../traditions/">traditions</a>
+        <a href="../sights/">Sights</a>
+        <a href="../culture/">culture</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
         </a>
     </header>
+    <main>
+        <h1>404 Site not Found</h1>
+
+    </main>
+    <footer>
+        <h1>Footer</h1>
+        <ul>
+            <li>
+                <p>link 1</p>
+            </li>
+            <li>
+                <p>link 2</p>
+            </li>
+            <li>
+                <p>link 3</p>
+            </li>
+            <li>
+                <p>link 4</p>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
