--- a/traditions/index.html
+++ b/traditions/index.html
@@ -23,25 +23,11 @@
         <i class="fa fa-bars"></i>
       </a>
     </header>
+
     <main class="trads-main">
-      <!-- intro -->
-      <!-- <article class="trads-article trads-top">
-        <div>
-          <h1 class="trads-h1 trads-title">Traditions</h1>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est sint
-            commodi asperiores fugit dolor nulla incidunt tempore pariatur
-            quaerat accusamus, voluptas suscipit dolore voluptates cumque, sunt
-            doloribus non temporibus id. Lorem ipsum dolor sit amet consectetur,
-            adipisicing elit. Repellendus, quaerat non. Explicabo amet magni
-            eaque reiciendis quo in quae tenetur, optio sequi velit porro ipsum
-            vel. Nostrum quibusdam labore adipisci.
-          </p>
-        </div>
-      </article> -->
       <!-- New Year -->
       <article class="trads-article trads-new-year">
-        <h2 class="trads-h2">Chinese New Year</h2>
+        <h2 id="T1" class="trads-h2">Chinese New Year</h2>
         <div>
           <section class="trads-section">
             <p class="trads-p">
@@ -77,7 +63,7 @@
           <figure>
             <img src="./img/fireworks.jpg" alt="Firworks over Hong Kong" />
             <figcaption>
-              New Year's fireworks display over Hong Kong.
+              New Year's fireworks display over Victoria Harbour, Hong Kong.
               <p class="trads-reference">
                 (<a
                   href="https://commons.wikimedia.org/wiki/File:Kung_Hei_Fat_Choi!_(6834861529).jpg"
@@ -94,7 +80,7 @@
 
       <!-- Tin Hau -->
       <article class="trads-article trads-tin-hau">
-        <h2 class="trads-h2">Tin Hau Festival</h2>
+        <h2 id="T2" class="trads-h2">Tin Hau Festival</h2>
         <div>
           <p class="trads-p">
             The Chinese sea goddess Tin Hau has historically been one of the
@@ -126,18 +112,24 @@
 
       <!-- boat -->
       <article class="trads-article trads-boat">
-        <h2 class="trads-h2">Dragon Boat Festival</h2>
+        <h2 id="T3" class="trads-h2">Dragon Boat Festival</h2>
 
         <div>
-          <p class="trads-p">
-            The dragon boat festival is a public holiday in Hong Kong where
-            people race in long canoes made to mimic ancient war boats with up
-            to 80 crew members rowing in the beat to a drum. While there are
-            several races taking place during the festival the CCB Hong Kong
-            International Dragon Boat Races in Victoria Harbour is the most
-            popular with over four thousand participants from all over the world
-            and up to thirty thousand spectators.
-          </p>
+          <section class="trads-section">
+            <p class="trads-p">
+              The dragon boat festival is a public holiday in Hong Kong where
+              people race in long canoes made to mimic ancient war boats with up
+              to 80 crew members rowing in the beat to a drum, the boats also
+              have a dragon head mounted to the front hence the name “dragon
+              boat”.
+            </p>
+            <p class="trads-p">
+              While there are several races taking place during the festival the
+              CCB Hong Kong International Dragon Boat Races in Victoria Harbour
+              is the most popular with over four thousand participants from all
+              over the world and up to thirty thousand spectators.
+            </p>
+          </section>
           <figure>
             <img src="./img/boat.jpg" alt="Multiple Dragon Boats" />
             <figcaption>
@@ -156,6 +148,23 @@
         </div>
       </article>
     </main>
+    <footer>
+      <h1>Footer</h1>
+      <ul>
+        <li>
+          <p>link 1</p>
+        </li>
+        <li>
+          <p>link 2</p>
+        </li>
+        <li>
+          <p>link 3</p>
+        </li>
+        <li>
+          <p>link 4</p>
+        </li>
+      </ul>
+    </footer>
   </body>
   <script src="../src/index.js"></script>
 </html>
