ändrade färger för att matcha start sidan + nya bilder

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div>
             <h1>Hong Kong</h1>
             <p>
-                Hong Kong is a city and special administrative region located in southern China and has a population of 7.4 million. With English as one of the official languages it's perfect for Westerners wanting to experience some of China's rich culture.
+                Hong Kong is a city and special administrative region located in southern China and has a population of 7.4 million. With English as one of the official languages it's perfect for Westerners wanting to experience some of China's rich culture. <br> Use the cards below to read more about Hong Kong's sights, culture or traditions.
             </p>
           </div>
         </div>
