uppdaterade index.html

--- a/index.html
+++ b/index.html
@@ -1,78 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/reset.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
 
     <title>HongKong</title>
-</head>
- 
-<body>
-    <header class="topnav" id="myTopnav">
+  </head>
 
-        <a href="./" id="homeBtn"></a>
-        <a href="./" class="active">Home</a>
-        <a href="./traditions/">traditions</a>
-        <a href="./sights/">Sights</a>
-        <a href="./culture/">culture</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-        </a>
+  <body>
+    <header class="topnav" id="myTopnav">
+      <a href="/" id="homeBtn"></a>
+      <a href="/" class="active">Home</a>
+      <a href="/traditions/">traditions</a>
+      <a href="/sights/">Sights</a>
+      <a href="/culture/">culture</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
     </header>
     <main>
-        <article>
-            <div class="MainThumbnail">
-                <div>
-                    <h1>Hong Kong</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam magnam beatae animi veritatis
-                        corrupti </p>
-                </div>
-            </div>
-            <h1>Just nu är </h1>
-
-        </article>
-        <section class="sights-container">
-            <h1>Sights</h1>
-            <span id="sight-card-1" class="sightlink">
-                <h2>Skyline</h2>
-                <a href="./sights/#s1"></a>
-
-            </span>
-            <span id="sight-card-2" class="sightlink">
-                <h2>Park</h2>
-                <a href="./sights/#s2"></a>
-
-            </span>
-            <span id="sight-card-3" class="sightlink">
-                <h2>Big Buddha</h2>
-                <a href="./sights/#s3"></a>
-            </span>
-        </section>
-
+      <article>
+        <div class="MainThumbnail">
+          <div>
+            <h1>Hong Kong</h1>
+            <p>
+                Hong Kong is a city and special administrative region located in southern China and has a population of 7.4 million. With English as one of the official languages it's perfect for Westerners wanting to experience some of China's rich culture. <br> Use the cards below to read more about Hong Kong's sights, culture or traditions.
+            </p>
+          </div>
+        </div>
+        <h1>Just nu är</h1>
+      </article>
+      </section>
+      <section class="sights-container">
+        <h1>Sights</h1>
+        <span id="sight-card-1" class="sightlink">
+          <h2>Skyline</h2>
+          <a href="./sights/#s1"></a>
+        </span>
+        <span id="sight-card-2" class="sightlink">
+          <h2>Park</h2>
+          <a href="./sights/#s2"></a>
+        </span>
+        <span id="sight-card-3" class="sightlink">
+          <h2>Big Buddha</h2>
+          <a href="./sights/#s3"></a>
+        </span>
+      </section>
+      <section class="sights-container">
+        <h1>Culture</h1>
+        <span id="sight-card-1" class="sightlink">
+          <h2>Placeholder</h2>
+          <a href="/sights/#s1"></a>
+        </span>
+        <span id="sight-card-2" class="sightlink">
+          <h2>Placeholder</h2>
+          <a href="/sights/#s2"></a>
+        </span>
+        <span id="sight-card-3" class="sightlink">
+          <h2>Placeholder</h2>
+          <a href="/sights/#s3"></a>
+        </span>
+      </section>
+      <section class="sights-container">
+        <h1>Traditions</h1>
+        <span id="trads-card-1" class="sightlink">
+          <h2>Chinese New Year</h2>
+          <a href="./traditions/#T1"></a>
+        </span>
+        <span id="trads-card-2" class="sightlink">
+          <h2>Tin Hau Festival</h2>
+          <a href="./traditions/#T2"></a>
+        </span>
+        <span id="trads-card-3" class="sightlink">
+          <h2>Dragon Boat Festival</h2>
+          <a href="./traditions/#T3"></a>
+        </span>
     </main>
     <footer>
-        <h1>Footer</h1>
-        <ul>
-            <li>
-                <p>link 1</p>
-            </li>
-            <li>
-                <p>link 2</p>
-            </li>
-            <li>
-                <p>link 3</p>
-            </li>
-            <li>
-                <p>link 4</p>
-            </li>
-        </ul>
+      <h1>Footer</h1>
+      <ul>
+        <li>
+          <p>link 1</p>
+        </li>
+        <li>
+          <p>link 2</p>
+        </li>
+        <li>
+          <p>link 3</p>
+        </li>
+        <li>
+          <p>link 4</p>
+        </li>
+      </ul>
     </footer>
-</body>
-<script src="./src/index.js"></script>
-
+  </body>
+  <script src="src/index.js"></script>
 </html>
