--- a/index.html
+++ b/index.html
@@ -31,13 +31,16 @@
           <div>
             <h1>Hong Kong</h1>
             <p>
-                Hong Kong is a city and special administrative region located in southern China and has a population of 7.4 million. With English as one of the official languages it's perfect for Westerners wanting to experience some of China's rich culture. <br> Use the cards below to read more about Hong Kong's sights, culture or traditions.
+              Hong Kong is a city and special administrative region located in
+              southern China and has a population of 7.4 million. With English
+              as one of the official languages it's perfect for Westerners
+              wanting to experience some of China's rich culture. <br />
+              Use the cards below to read more about Hong Kong's sights, culture
+              or traditions.
             </p>
           </div>
         </div>
-        <h1>Just nu är</h1>
       </article>
-      </section>
       <section class="sights-container">
         <h1>Sights</h1>
         <span id="sight-card-1" class="sightlink">
@@ -82,6 +85,7 @@
           <h2>Dragon Boat Festival</h2>
           <a href="./traditions/#T3"></a>
         </span>
+      </section>
     </main>
     <footer>
       <h1>Footer</h1>
