--- a/traditions/index.html
+++ b/traditions/index.html
@@ -83,13 +83,14 @@
         <h2 id="T2" class="trads-h2">Tin Hau Festival</h2>
         <div>
           <p class="trads-p">
-            The Chinese sea goddess Tin Hau has historically been one of the
-            most important gods in Hong Kong. As such, her birthday is
-            accompanied by a grand celebration. While there are many different
-            celebrations around the area the biggest one is in Cha Kwo Ling
-            where people will parade down the streets, some may also dress up as
-            mythological creatures like dragons or qilins and perform
-            traditional dances.
+            Since Hong Kong has been an important harbour for a long time it's
+            no surprise the Chinese sea goddess Tin Hau has historically been
+            one of the most important gods for the area. As such, her birthday
+            is accompanied by a grand celebration. While there are many
+            different celebrations around the area the biggest one is in Cha Kwo
+            Ling where people will parade down the streets in different
+            costumes, some even dress up as mythological creatures like dragons
+            or qilins and perform traditional dances.
           </p>
           <figure>
             <img src="./img/Tin_Hau.jpg" alt="Statue of Tin Hau" />
