startsida + traditions validerade

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <article>
         <div class="MainThumbnail">
           <div>
-            <h1>Hong Kong</h1>
+            <h2>Hong Kong</h2>
             <p>
               Hong Kong is a city and special administrative region located in
               southern China and has a population of 7.4 million. With English
@@ -42,53 +42,53 @@
         </div>
       </article>
       <section class="sights-container">
-        <h1>Sights</h1>
-        <span id="sight-card-1" class="sightlink">
+        <h2>Sights</h2>
+        <div id="sight-card-1" class="sightlink">
           <h2>Skyline</h2>
           <a href="./sights/#s1"></a>
-        </span>
-        <span id="sight-card-2" class="sightlink">
+        </div>
+        <div id="sight-card-2" class="sightlink">
           <h2>Park</h2>
           <a href="./sights/#s2"></a>
-        </span>
-        <span id="sight-card-3" class="sightlink">
+        </div>
+        <div id="sight-card-3" class="sightlink">
           <h2>Big Buddha</h2>
           <a href="./sights/#s3"></a>
-        </span>
+        </div>
       </section>
       <section class="sights-container">
-        <h1>Culture</h1>
-        <span id="sight-card-1" class="sightlink">
+        <h2>Culture</h2>
+        <div id="culture-card-1" class="sightlink">
           <h2>Placeholder</h2>
           <a href="/sights/#s1"></a>
-        </span>
-        <span id="sight-card-2" class="sightlink">
+        </div>
+        <div id="culture-card-2" class="sightlink">
           <h2>Placeholder</h2>
           <a href="/sights/#s2"></a>
-        </span>
-        <span id="sight-card-3" class="sightlink">
+        </div>
+        <div id="culture-card-3" class="sightlink">
           <h2>Placeholder</h2>
           <a href="/sights/#s3"></a>
-        </span>
+        </div>
       </section>
       <section class="sights-container">
-        <h1>Traditions</h1>
-        <span id="trads-card-1" class="sightlink">
+        <h2>Traditions</h2>
+        <div id="trads-card-1" class="sightlink">
           <h2>Chinese New Year</h2>
           <a href="./traditions/#T1"></a>
-        </span>
-        <span id="trads-card-2" class="sightlink">
+        </div>
+        <div id="trads-card-2" class="sightlink">
           <h2>Tin Hau Festival</h2>
           <a href="./traditions/#T2"></a>
-        </span>
-        <span id="trads-card-3" class="sightlink">
+        </div>
+        <div id="trads-card-3" class="sightlink">
           <h2>Dragon Boat Festival</h2>
           <a href="./traditions/#T3"></a>
-        </span>
+        </div>
       </section>
     </main>
     <footer>
-      <h1>Footer</h1>
+      <h2>Footer</h2>
       <ul>
         <li>
           <p>link 1</p>
@@ -104,6 +104,6 @@
         </li>
       </ul>
     </footer>
+    <script src="src/index.js"></script>
   </body>
-  <script src="src/index.js"></script>
 </html>
