--- a/traditions/index.html
+++ b/traditions/index.html
@@ -29,7 +29,8 @@
       <article class="trads-article trads-new-year">
         <h2 id="T1" class="trads-h2">Chinese New Year</h2>
         <div>
-          <section class="trads-section">
+          <div>
+            <!-- <section class="trads-section"> -->
             <p class="trads-p">
               The Lunar New Year is a 15 day festival beginning with the first
               new moon between the 21st of January and the 20th of February.
@@ -58,7 +59,8 @@
               impressive lantern displays as well as other performances like
               dancing and acrobatics.
             </p>
-          </section>
+          </div>
+          <!-- </section> -->
 
           <figure>
             <img src="./img/fireworks.jpg" alt="Firworks over Hong Kong" />
@@ -116,7 +118,8 @@
         <h2 id="T3" class="trads-h2">Dragon Boat Festival</h2>
 
         <div>
-          <section class="trads-section">
+          <!-- <section class="trads-section"> -->
+          <div>
             <p class="trads-p">
               The dragon boat festival is a public holiday in Hong Kong where
               people race in long canoes made to mimic ancient war boats with up
@@ -130,7 +133,8 @@
               is the most popular with over four thousand participants from all
               over the world and up to thirty thousand spectators.
             </p>
-          </section>
+          </div>
+          <!-- </section> -->
           <figure>
             <img src="./img/boat.jpg" alt="Multiple Dragon Boats" />
             <figcaption>
@@ -166,6 +170,6 @@
         </li>
       </ul>
     </footer>
+    <script src="../src/index.js"></script>
   </body>
-  <script src="../src/index.js"></script>
 </html>
