--- a/index.html
+++ b/index.html
@@ -30,14 +30,35 @@
         <div class="MainThumbnail">
           <div>
             <h2>Hong Kong</h2>
-            <p>
-              Hong Kong is a city and special administrative region located in
-              southern China and has a population of 7.4 million. With English
-              as one of the official languages it's perfect for Westerners
-              wanting to experience some of China's rich culture. <br />
-              Use the cards below to read more about Hong Kong's sights, culture
-              or traditions.
-            </p>
+            <div id="MainThumbnail-content">
+              <p>
+                Hong Kong is a city and special administrative region located in
+                southern China and has a population of 7.4 million people. As a
+                special administrative region Hong Kong has its own government
+                but shares the same president as mainland China, the judicial
+                system in Hong Kong is also closer to its western equivalents
+                than the Chinese system.
+              </p>
+              <p>
+                In 1842 after the First Opium War China ceded Hong Kong to the
+                British, as a result of 100 years of British tyranny English is
+                widely spoken in the city and street signs have both a Chinese
+                and English translation making it perfect for Westerners who
+                might not be too fluent in Chinese.
+              </p>
+              <p>
+                Hong Kong also has a rich cultural heritage with influences from
+                both the east and the west and tourists can experience it all,
+                at least partly, translated into english. There are also many
+                impressive sights to visit and if you're there at the right time
+                you can experience some of Hong Kong's grand festival
+                celebrations.
+              </p>
+              <p>
+                Use the cards below to read more about Hong Kong's sights,
+                culture and traditions.
+              </p>
+            </div>
           </div>
         </div>
       </article>
